--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   app:
     build: .
@@ -7,9 +6,5 @@ services:
       - "5000:5000"
     environment:
       - NODE_ENV=production
-      - PORT=5000
-    # EXPLICITAMENTE SEM HEALTHCHECK
-    # healthcheck: disable
-    restart: unless-stopped
-    volumes:
-      - ./uploads:/app/uploads
+      - DATABASE_URL=${DATABASE_URL}
+    # Sem healthcheck definido
